# mcp-nexus

./: .env.example  .gitignore  CLAUDE.md  CODEBASE_EVALUATION.md  COMMIT_PLAN.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  README.md  components.json  eslint.config.js  feedback.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.qoder/quests/: modal-migration-to-shadcn-ui-icon-system-replacement-with....md
.zencoder/rules/: repo.md
docs/: environment-setup.md  mvp-gap-analysis.md  ui-patterns.md
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: clients.rs  config.rs  doctor.rs  health.rs  installation.rs  keychain.rs  marketplace.rs  mod.rs  sync.rs  system.rs  updates.rs
src-tauri/src/models/: client.rs  config.rs  doctor.rs  marketplace.rs  mod.rs  server.rs
src-tauri/src/services/: client_detector.rs  config_manager.rs  doctor.rs  health.rs  installation.rs  keychain.rs  marketplace_client.rs  mod.rs  sync_engine.rs  updates.rs
src/components/: ThemeProvider.tsx
src/contexts/: ThemeContext.ts
src/hooks/: index.ts  useAutoSync.ts  useClients.ts  useConfig.ts  useCredentials.ts  useDoctor.ts  useHealth.ts  useKeyboard.ts  useMarketplace.ts  useServerDetails.ts  useServers.ts  useTheme.ts  useUpdates.ts
src/lib/: env.ts  logger.test.ts  logger.ts  notifications.ts  tauri.ts  utils.ts
src/pages/: Clients.tsx  (+5 more)
(+137 files in other folders)
