[package]
name = "mcp-nexus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcp_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"              # Platform-specific directories
uuid = { version = "1", features = ["v4", "serde"] }  # Unique IDs for servers
chrono = { version = "0.4", features = ["serde"] }     # Timestamps
thiserror = "2"         # Error handling
reqwest = { version = "0.12", features = ["json"] }  # HTTP client for marketplace API
tokio = { version = "1", features = ["sync", "time", "process"] }  # Async runtime + caching utilities
urlencoding = "2"  # URL encoding for query parameters
keyring = "3"       # Cross-platform secure credential storage (macOS Keychain, Windows Credential Manager, etc.)

[dev-dependencies]
tempfile = "3"          # For testing with temp directories

